# bridge

./: .gitmodules  CMakeLists.txt  azure-pipelines.yml
bridge/: CMakeLists.txt  ddsjson.C  ddsjson.h
